--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: slate
+theme: minima
 highlighter: true
 plugins:
   - jekyll-feed
